--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "bcryptjs": "^3.0.2",
     "eslint-plugin-import": "^2.31.0",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.5",
+    "validator": "^13.9.0"
   }
 }
