--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -4,10 +4,9 @@
     "no-console": "off",
     "no-multiple-empty-lines": "off",
 
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
+
 
   }
 }
-
-
-//"no-unused-expressions": "off",
