--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "celebrate": "^15.0.3",
+    "cors": "^2.8.5",
     "curl": "^0.1.4",
     "eslint-plugin-import": "^2.31.0",
     "express": "^4.21.2",
