finalizamos la instalacion de nginx. y el backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "scp -r -i C:/Users/FelipeLenovo/ssh-id_ed25519.pub ./dist/*juanpipo03@around:home/juanpipo03/around-frontend"
   },
   "dependencies": {
     "react": "^18.3.1",
