--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "curl": "^0.1.4",
+    "dotenv": "^16.4.7",
     "eslint-plugin-import": "^2.31.0",
     "express": "^4.21.2",
     "express-winston": "^4.2.0",
